작가 이름 추출 추가

--- a/Web_crawling.ipynb
+++ b/Web_crawling.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8bBFBlxvFkRkq5h7+OXUj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,8 +59,7 @@
         "\n",
         "!apt install chromium-chromedriver\n",
         "!cp /usr/lib/chromium-browser/chromedriver '/content/drive/MyDrive'\n",
-        "!pip install chromedriver-autoinstaller\n",
-        ""
+        "!pip install chromedriver-autoinstaller\n"
       ],
       "metadata": {
         "colab": {
@@ -70,7 +68,7 @@
         "id": "U9p7lMZeVf9j",
         "outputId": "d6e85ffb-2738-4288-d79b-396cbb9c483d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,8 +202,7 @@
       "source": [
         "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        ""
+        "drive.mount('/content/drive')\n"
       ],
       "metadata": {
         "colab": {
@@ -214,7 +211,7 @@
         "id": "lezuSF0uVoIp",
         "outputId": "6997168c-4f69-4f9c-95a8-df43210e4aaa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +234,7 @@
         "id": "rCH7nbqyWLtn",
         "outputId": "4968f40e-98dc-49d0-c864-628d48e1e689"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,6 +316,12 @@
         "        title = title_element.text\n",
         "        print(f\"책 제목: {title}\")\n",
         "\n",
+        "        # 작가 이름 추출\n",
+        "        author_xpath = '//*[@id=\"scrollSpyProdInfo\"]/div[9]/div[2]/div[1]/h3/a/span'\n",
+        "        author_element = wait.until(EC.presence_of_element_located((By.XPATH, author_xpath)))\n",
+        "        author = author_element.text\n",
+        "        print(f\"작가 이름: {author}\")\n",
+        "\n",
         "        # 목차 추출\n",
         "        toc_xpath = '//*[@id=\"scrollSpyProdInfo\"]/div[10]/div[2]/div[1]/div/ul/li'\n",
         "        toc_elements = wait.until(EC.presence_of_all_elements_located((By.XPATH, toc_xpath)))\n",
@@ -361,9 +364,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WxhSAB4OWLv-",
-        "outputId": "cc885f35-9283-4253-8c60-63da55f8c984"
+        "outputId": "cc885f35-9283-4253-8c60-63da55f8c984",
+        "collapsed": true
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
